--- a/index.html
+++ b/index.html
@@ -16,47 +16,57 @@
 </head>
 
 <body>
-        <!-- Images -->
-        <!-- Microphone -->
-        <!-- https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png -->
-        <!-- Grid -->
+    <!-- Images -->
+    <!-- Microphone -->
+    <!-- https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png -->
+    <!-- Grid -->
 
-        <!-- hover links = underline -->
-        <section>
-        <nav>
-            <ul class="nav">
-                <li><a href="#">Gmail</a></li>
-                <li><a href="#">Images</a></li>
-                <li><a href="#"><img src="https://sriiraj.github.io/google-homepage/img/googapps.png" alt="Grid"></a></li>
-                <li><a href="#"><img src ="https://i.stack.imgur.com/34AD2.jpg" alt=" User Image"></a></li>
-            </ul>
-        </nav>
-    </section>
+    <!-- hover links = underline -->
+    <header>
+            <div class="container">
+                <ul>
+                    <li class="nav-left"><a href="#">About</a></li>
+                    <li class="nav-left"><a href="#">Store</a></li>
+                    <li class="nav-right"><a href="#"><img class="profile" src="https://i.stack.imgur.com/34AD2.jpg" alt=" User Image"></a></li>    
+                    <li class="nav-right"><a href="#"><img class="dots" src="https://sriiraj.github.io/google-homepage/img/googapps.png" alt="Grid"></a></li>
+                    <li class="nav-right"><a href="#">Images</a></li>
+                    <li class="nav-right"><a href="#">Gmail</a></li>
+                </ul>
+            </div>
 
-    <section>
-        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
-        <form action="#" method="POST">
-            <input type="text" id="search" name="search">
-            <label for="search"></label>
-            <input type="submit" value="Google Search">
-            <input type="submit" value="I'm Feeling Lucky">
-        </form>
-        <p>Google offered in: <a href="#">Nordic</a></p>
+    </header>
+
+    <section class="main">
+        <div class="logo">
+            <img class="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+                alt="Google Logo">
+        </div>
+        <div>
+            <form action="#" method="POST">
+                <div class="search">
+                    <input class="search-bar" type="search" id="search" name="search">
+                    <label for="search"></label>
+                </div>
+                <div class="button">
+                    <input class="button1" type="submit" value="Google Search">
+                    <input class="button2" type="submit" value="I'm Feeling Lucky">
+            </form>
+        </div>
     </section>
 
     <section>
         <div class="footer">
+
             <ul>
-                <li><a href="#">Viking Lands</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Advertising</a></li>
-                <li><a href="#">Business</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">How Search works</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Settings</a></li>
+                <li class="footer-left"><a href="#">Advertising</a></li>
+                <li class="footer-left"><a href="#">Business</a></li>
+                <li class="footer-left"><a href="#">About</a></li>
+                <li class="footer-left"><a href="#">How Search works</a></li>
+
+                <li class="footer-right"><a href="#">Privacy</a></li>
+                <li class="footer-right"><a href="#">Terms</a></li>
+                <li class="footer-right"><a href="#">Settings</a></li>
+
             </ul>
         </div>
     </section>
